# vqwen-qformer

./: .gitignore  README.md  pyproject.toml
configs/: stage1.yaml  stage2.yaml  tiktok_lora.yaml
data/tiktok_fps1/: ab_test_results.json  bs_sweep_results.json  cross_compare_summary.json
results/dual_eval/: v6_per_frame.jsonl  v6_summary.json  v7_per_frame.jsonl  v7_summary.json
results/tiktok_lora_eval/: classify_checkpoint-200.jsonl  classify_checkpoint-200_summary.json  classify_checkpoint-392.jsonl  classify_checkpoint-392_summary.json  classify_tiktok-lora.jsonl  classify_tiktok-lora_summary.json
scripts/: 01_download_blip2.py  02_smoke_test.py  03_train_stage1.sh  04_train_stage2.sh  05_cache_features.py  06_cache_stage2_features.sh  11_extract_tiktok_1fps.py  12_build_tiktok_convs.py  13_cache_tiktok.sh  14_train_tiktok_lora.sh  15_download_teacher.py  16_label_with_teacher.py  16b_label_test.py  18_download_judge.py  19_cross_compare.py  20_eval_tiktok_test.py  22_eval_dual_benchmark.py  23_ab_test_batching.py  24_ab_test_bs_sweep.py  30_export_hf.py  99_test_published_model.py
src/vqwen_qformer/: constants.py  dataset.py  generate.py  model.py  preprocess.py  projector.py  train.py
